--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@ Error message and password prompt
 
 <li>אוטו מטריה</li>
 
-<li>אוכל</li>
-
 <li>אורז לבן עם צנוברים</li>
+
+<li>אחות כהן</li>
 
 <li>אחיות חוץ</li>
 
@@ -321,6 +321,8 @@ Error message and password prompt
 
 <li>הכתיבה</li>
 
+<li>המטבח על פי ז'נבייב</li>
+
 <li>המטבח של הנחלה</li>
 
 <li>המסאז'יסטית</li>
@@ -369,8 +371,6 @@ Error message and password prompt
 
 <li>כירולוגיה פסיכודיאגנוסטית</li>
 
-<li>כל המתכונים של ארוחת הכריסמס</li>
-
 <li>לוקוס בתנור</li>
 
 <li>לזניה צמחונית</li>
@@ -410,6 +410,8 @@ Error message and password prompt
 <li>מרק</li>
 
 <li>מרק כתום בסיר גדול</li>
+
+<li>מתכוני ארוחת הכריסמס</li>
 
 <li>נדיה</li>
 
@@ -472,6 +474,8 @@ Error message and password prompt
 <li>צ'ן</li>
 
 <li>צ'נג</li>
+
+<li>צ'רלי קאופמן</li>
 
 <li>צלי בשר עם תפוחי אדמה</li>
 
@@ -8242,7 +8246,7 @@ Error message and password prompt
 <pre>{
     &quot;tiddlers&quot;: {
         &quot;Untitled&quot;: {
-            &quot;text&quot;: &quot; כל החומרים למעבד המזון עם להב הפלדה, ומפ&quot;,
+            &quot;text&quot;: &quot;&lt;span style=\&quot;background-color:;\r\nfill:#fff;\r\ncolor:#fff;\&quot; class=\&quot;tc-tag-label\&quot;&gt;עפ\&quot;י ז&lt;/span&gt;&quot;,
             &quot;title&quot;: &quot;Untitled&quot;
         }
     }
@@ -8327,7 +8331,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20170407000423221" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Tags</pre>
 </div>
-<div created="20161023184705203" modified="20170407113435620" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20170423214933188" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8336,7 +8340,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[פיליפ סימור הופמן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ארוחת כריסמס]] [[חמאת שום ועשבי תיבול]] [[המטבח על פי ז'נבייב]] [[אחות כהן]] [[פיליפ סימור הופמן]] [[צ'רלי קאופמן]] [[אחיות חוץ]] [[מאיר אריאל]] [[ירקות קלויים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8356,7 +8360,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170422202455120" title="$:/temp/search">
+<div created="20161023184814872" modified="20170423220020802" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8568,24 +8572,6 @@ Error message and password prompt
 בקיץ זו לא הייתה בעיה, וגם היו לי אופניים, אבל בחורף תמיד חלמתי שיש לי אוטו-תלת אופן, עם כיסוי בצורת מטריה ענקית שקופה.
 </pre>
 </div>
-<div created="20170422140632892" modified="20170422211643736" tags="[[המטבח עפ&quot;י ז'נבייב]]" title="אוכל">
-<pre>[img[pictures/genevieve-food.jpg]]
-
-!!![[ז'נבייב]]:
-
-אני לא שפית ואין לי יומרה כזו. אני בסך הכל בת למהגרים ממרוקו, שניסתה להיות ילדה טובה, והלכה ולמדה ראיית חשבון, ונישאה לגבר שנראה היה ראוי, והפכה לאם לשתי בנות. אביה נפטר, היא התגרשה ובעזרת אימה היקרה פתחה את [[הקוסקוס]].
-
-אני אוהבת להכין אוכל פשוט מהבחינה הזו, שהוא לא מורכב, ואני אוהבת גם לאכול בחוץ.
-
-לחם, [[חמאת שום ועשבי תיבול]], גבינות, סלט, [[ירקות קלויים]], ירקות צרובים, איזה דרניק וקפה לקינוח - בעיני זה הכי.
-
-
-
-
-
-
-</pre>
-</div>
 <div created="20170402173414658" modified="20170404203744152" tags="[[מתכוני ארוחת הכריסמס]]" title="אורז לבן עם צנוברים">
 <pre>[img[pictures/orez-lavan-matconim.jpg]]
 
@@ -8605,7 +8591,10 @@ Error message and password prompt
 
 את הצנוברים הקלויים מפזרים מעל, ואפשר לפזר גם עשבי תיבול קצוצים.</pre>
 </div>
-<div created="20170415105721479" modified="20170417192946322" tags="[[אחיות חוץ]]" title="אחיות חוץ">
+<div created="20170423214419764" modified="20170423214426620" title="אחות כהן">
+<pre>&lt;&lt;list-links filter:&quot;[tag[אחות כהן]]&quot;&gt;&gt;</pre>
+</div>
+<div created="20170415105721479" modified="20170423214308882" title="אחיות חוץ">
 <pre>[img[pictures/ahayot-huz.jpg]]
 
 !!![[גורה]]:
@@ -8624,14 +8613,10 @@ Error message and password prompt
 האחיות בוחרות לעצמן אחים ללא מורא ואף ללא ידיעתם. 
 כבר בטקסט הכתוב לעיל אפשר לראות איך בחרו לעצמן את האח אירווינג ואת האחים הבימאים איתן וג'ואל, וכמותן יש עוד רבים (מצוינים ומשובחים), שיצוינו בהמשך, וכן ילכו ויתווספו . 
 
-חיאות חוץ שבגנזך:
+האחיות חוץ שבגנזך:
 
-*[[איתן וג'ואל כהן]] 
-* [[ג'ון אירווינג]]
-* [[ דיוויד בואי]]
-*[[פיליפ סימור הופמן]]
-* [[מאיר אריאל]]
-* [[רן יגיל]]</pre>
+&lt;&lt;list-links filter:&quot;[tag[אחיות חוץ]]&quot;&gt;&gt;
+</pre>
 </div>
 <div created="20170301155222124" modified="20170301155811140" title="אימא, סבתא ואני">
 <pre>[img[pictures/PrYBW9yDkBFFqCB6.jpg]]
@@ -8807,7 +8792,7 @@ Error message and password prompt
 מוסיפים פנימה את צרור האספרגוס וצולים כמה דקות.
 * בוזקים מלח ים גס, מערבבים בקלות, ומגישים. (אפשר גם לאכול במהלך היום או לשמור במקרר יומיים).</pre>
 </div>
-<div created="20161112191527440" modified="20170416202626305" title="ארוחת כריסמס">
+<div created="20161112191527440" modified="20170423220139575" title="ארוחת כריסמס">
 <pre>[img[pictures/zVz8rufF4aR5GlBM.jpg]]
 
 
@@ -8840,7 +8825,7 @@ Error message and password prompt
 
 בקישור הבא כתבתי את [[מה שבאמת קרה בארוחת כריסמס]].
 
-ובזה שאכתוב עכשיו את [[כל המתכונים של ארוחת הכריסמס]].
+ובזה שאכתוב עכשיו את [[מתכוני ארוחת הכריסמס]].
 
 יול.
 
@@ -9300,6 +9285,26 @@ Error message and password prompt
 אז חוץ מהטיפול השבועי אצל רוז'ה, עבודות בית ובילוי עם אחיותי, אני מטביעה יגוני כאן.
 
 ומודה על כך [[מזוטו לבי|מרינה זוטו]].
+
+
+
+
+
+</pre>
+</div>
+<div created="20170422140632892" modified="20170423215322780" title="המטבח על פי ז'נבייב">
+<pre>[img[pictures/genevieve-food.jpg]]
+
+!!![[ז'נבייב]]:
+
+אני לא שפית ואין לי יומרה כזו. אני בסך הכל בת למהגרים ממרוקו, שניסתה להיות ילדה טובה, והלכה ולמדה ראיית חשבון, ונישאה לגבר שנראה היה ראוי, והפכה לאם לשתי בנות. אביה נפטר, היא התגרשה ובעזרת אימה היקרה פתחה את [[הקוסקוס]].
+
+אני אוהבת להכין אוכל פשוט מהבחינה הזו, שהוא לא מורכב, ואני אוהבת גם לאכול בחוץ.
+
+לחם,חמאת שום ועשבי תיבול, גבינות, סלט, ירקות קלויים, ירקות צרובים, איזה דרניק וקפה לקינוח - בעיני זה הכי.
+
+&lt;&lt;list-links filter:&quot;[tag[המטבח על פי ז'נבייב]]&quot;&gt;&gt;
+
 
 
 
@@ -9844,20 +9849,20 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * מתבלים ומערבבים
 * שומרים במקרר בצנצנת סגורה</pre>
 </div>
-<div created="20170422183732891" modified="20170422202411597" tags="[[חלומות שחלמנו]]" title="חלומות שחלמנו">
+<div created="20170422183732891" modified="20170423215513092" title="חלומות שחלמנו">
 <pre>[img[pictures/chalomot-shechalamnoo.jpg]]
 
 !!![[יויו]]:
 
 תמיד חלמתי להיות [[מפקח נקיון במטבח של מסעדה|מנקים היטב]], אבל מה שעוד יותר יפה, זה שמימוש החלום הזה הביא לי עוד חלומות:
 
-* למשל [[המפעיל יד|מפעיל יד]],שטרם קרה.
-* [[תיק הגב|תיקי גב לקניות שדןדן ויויו הכינו]] עליו חשבתי כמה ימים אחרי שעברנו [[לדירה|הדירה]], ונגנבתי על ההליכה לשוק.
-* [[האוטו-מטריה|אוטו מטריה]] של אירי.
+* למשל המפעיל יד,שטרם קרה.
+
+&lt;&lt;list-links filter:&quot;[tag[חלומות שחלמנו]]&quot;&gt;&gt;
 
 </pre>
 </div>
-<div created="20170422160814236" modified="20170422162357443" tags="[[המטבח עפ&quot;י ז'נבייב]]" title="חמאת שום ועשבי תיבול">
+<div created="20170422160814236" modified="20170423215227113" tags="[[המטבח על פי ז'נבייב]]" title="חמאת שום ועשבי תיבול">
 <pre>[img[pictures/genevieve-green-butter.jpg]]
 
 !!![[ז'נבייב]]:
@@ -9927,7 +9932,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 <pre>[img[pictures/ccDpGp3IHg5hAMCR.JPG]]
 מאגר גז שכל התפוקה העתידית שלו נמכרה לגורם שמעדיף להישאר בעילום שם תמורת הזכות לפתח את [[מרינה זוטו]] ו[[געזונטהייטס]] בתור נכסי [[דיור מוגז]].</pre>
 </div>
-<div created="20170422205250692" modified="20170422215212898" tags="[[המטבח עפ&quot;י ז'נבייב]]" title="ירקות קלויים">
+<div created="20170422205250692" modified="20170423215157887" tags="[[המטבח על פי ז'נבייב]]" title="ירקות קלויים">
 <pre>[img[pictures/yerakot-klooim.jpg]]
 
 !!![[ז'נביב]]:
@@ -9965,56 +9970,6 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 <pre>[img[pictures/yZiEyakkL0F87eQO.JPG]]
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
-</div>
-<div created="20161114205035106" modified="20170415150642986" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
-<pre>[img[pictures/christmas-dinner.jpg]]
-
-
-!!![[גורה]]:
-
-טוב, בינתיים ממש לא כולם אבל אני בדרך לשם, וכידוע, הדרך היא החשובה.
-
-ואגב דרך, [[יויו]] ו[[דןדן]], הכינו [[תיקי גב|תיקי גב לקניות שדןדן ויויו הכינו]]. הם מצויינים לקניות שקודמות להכנת האוכל.
-
-
-
-* [[מרק כתום בסיר גדול]] - יויו 
-* [[הדג|לוקוס בתנור]] לאפייה שתתבצע רק זמן קצר לפני הארוחה - יויו 
-* [[אורז לבן עם צנוברים]] - גורה ואירי 
-* [[מג'דרה]] - גורה ואירי 
-* [[תפוחי אדמה ובטטות בתנור]] - גורה ואירי 
-* [[פלפלים קלויים]]- אווה 
-* [[סלט עדשים עם כוסברה ובצל קצוץ]] - אווה
-* [[סלט עגבניות עם שום]] - אווה
-* [[שעועית ירוקה בחמאה ושום]]  - אווה
-* [[סלק מבושל]] - אווה  
-* [[אספרגוס]] - אווה 
-* [[סלט חסה]] - יויו 
-* [[סלט מלפפונים עם בצל סגול ושמיר]] - יויו 
-* [[טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן]] - אווה 
-* [[עוגיות קימל]] - אווה 
-* [[תבשיל שורשים ואורז בשלושה צבעים]] -  אלפרד 
-* [[מלפפונים חמוצים]] - אלפרד 
-* [[גרטן תפו&quot;א]] - דניאל  
-* [[פחזניות ממולאות בכבד קצוץ]] - אנג'ליק 
-* [[צנצנת עם חזרת]] - אנג'ליק
-* [[צלי בשר עם תפוחי אדמה]] - סוניה
-* [[חמוצים סיניים]] - גואן יין
-* [[תרנגול הודו אפוי]] - ז'נבייב
-* [[קוסקוס]] - ז'נבייב 
-* [[לזניה צמחונית]] - רוז'ה  
-* [[סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום]] - אנה
-* [[עיגולי מרציפן]] - ז'נבייב 
-
-* [[פבלובה]] - פיליפ
-* [[פאי דובדבנים]] - אווה
-* [[פאי פקאן עם קרמל]]- אווה 
-* [[פאי אגסים עם קרם גבינה ושקדים]] - אווה
-* [[עוגת מוקה]] - אווה
-* [[פנטונה]] - סוניה 
-* [[ריגו יאנצ'י]] - סוניה     
-
-</pre>
 </div>
 <div created="20170402165550173" modified="20170404203800222" tags="[[מתכוני ארוחת הכריסמס]]" title="לוקוס בתנור">
 <pre>[img[pictures/dag-matconim.jpg]]
@@ -10168,14 +10123,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161114202954459" modified="20170407140420292" title="מה שבאמת קרה בארוחת כריסמס">
+<div created="20161114202954459" modified="20170423220016193" title="מה שבאמת קרה בארוחת כריסמס">
 <pre>[img[pictures/kie87qScl5HLeyVw.JPG]]
 
 !!![[אוה]]:
 
 ''שעות אחר הצהריים שלפני הארוחה:''
 
-[[כל המתכונים של ארוחת הכריסמס]]
+[[מתכוני ארוחת הכריסמס]]
 
 [[דןדן]] ו[[יויו]] חזרו מהשוק והמשכנו בהכנות לערב. יויו שולף בגאווה [[מתיק הגב|תיקי גב לקניות שדןדן ויויו הכינו]] חנוכייה ונרות. הם הביאו לוקוס ענקי מפולט. כבר היה רבע לשלוש אז התחלתי לאפות. [[אירי]] התייצבה לידי ורצתה לדעת ולעשות אתי כל דבר. הכנו פאי דובדבנים, פאי פקאן עם קרמל ופאי אגסים עם קרם גבינה ושקדים. יויו הכין מרק כתום בסיר גדול ואת הדג לאפייה שתתבצע רק זמן קצר לפני הארוחה. אחרי העוגות אפיתי את פלחי הכרוב ורצועות הקישואים הירוקים בשמן זית ומלח גס. [[גורה]] ואירי הכינו אורז לבן עם צנוברים, מג'דרה, תפוחי אדמה ובטטות בתנור, פלפלים קלויים, סלט עדשים עם כוסברה ובצל קצוץ וסלט עגבניות עם שום. שתינו בירות ועשנו ודיברנו על מה שנלבש ועל האוכל וערכנו את השולחן. כבר היה ערב, הכנתי שעועית ירוקה בחמאה ושום וסלק מבושל ואת האספרגוס. יויו הכין סלט חסה וסלט מלפפונים עם בצל סגול ושמיר. דןדן בעיקר עזר מסביב, חתך, ערבב, שטף כלים וניקה. אירי והוא פרקו לקערה ענקית ובסבלנות רבה פומלות ותפוזים. מעל סחטו לימון ופזרו שתי כפות סוכר, ערבבו ופזרו אגוזי מלך קלויים. על משטח העבודה הבנים סידרו את בקבוקי האלכוהול וכוסות וחטיפים. הכנתי טוסטים עם טחינה, רסק עגבניות, מעליהם הנחתי את הקישואים והכרוב האפויים וגררתי פרמז'ן. הבאתי אותם גאה ליויו וביקשתי שיניח אותם עם החטיפים שליד השתייה וגם את עוגיות הקימל. הוא עשה זאת כמובן. אירי וגורה הדליקו נרות. יויו שם אלבום של [[fela kuti|https://en.wikipedia.org/wiki/Fela_Kuti]]. לא הכרתי את פֶלָה עד לאותו הרגע. יויו אמר לי שזה חור רציני בהשכלה. הנחנו כל דבר במקומו. כבר היה שבע. התקלחנו והתלבשנו כולנו. לבשתי שמלה שחורה וז'קט שחור וחרוזים שחורים ונעלתי נעליים שחורות וגרבתי גרביונים חומים, ואת עגילי הזהב התלויים הקבועים שלי אותם רכשתי לפני כמה שנים בחנות תכשיטים ליד השוק, בתמורה לטבעת הנישואין שלי ושרשרת זהב קרועה. התאפרתי והתבשמתי. נפגשנו בסלון. דןדן מזג לכולנו יין והרמנו לחיים. כולם היו חגיגיים וריחניים כדבעי, גורה בחצאית כפלים מעל הברכיים בוורוד בהיר וגרביים גבוהות לבנות עד מעל לברכיים עליהן הדפסים של עץ אשוח. מעל סוודר לבן צמוד ארוך. נעולה נעליים סגולות גבוהות עם שרוכים. אירי בחולצת צווארון ירקרקה חתיכית מעליה סוודר עם שרוולים קצרים באפור כהה, ומכנסיים מתרחבים באפור בהיר תחתם נעלה מגפונים חומים רכים, על צווארה שרשרת זהב דקה עם כוכב אחד קטן וצמד דובדבנים. הבנים חתיכים במכנסיים וסוודרים צבעוניים. בשמונה הפעמון צלצל בפעם הראשונה. יויו דןדן וגורה מיד רצו לדלת. בדלת עמדו, [[אלפרד]] מחייך עם בובת סנטה קלאוס ענקית ביד שמאל וביד ימין אחז תיק פלסטיק בו היו תבשיל שורשים ואורז בשלושה צבעים וצנצנת עם מלפפונים חמוצים. [[ג'וזף]] עם ארגז מלא אלכוהול ושקית מלאה שוקולד ואגוזים ופרות יבשים. איתם [[דניאל]], בחור רזה בגובה בינוני, שמרכיב משקפי מתכת וחייכן. שיערו שחור ומסופר בתספורת קצרה חתוכה היטב, בידיו גרטן תפו&quot;א ויין ומאחור [[אנג'ליק]]. ג'ינג'ית יפה עם שער חלק עד הכתפיים ועיניים ירוקות, אוחזת בידיה תבנית עם פחזניות ממולאות בכבד קצוץ, צנצנת עם חזרת, שקית מלאה בצימוקים שחורים ובקבוק בחרובקה. הם נכנסו והכל הלך נהדר, אני לא אגיד את זה יותר. כל מי שנכח בערב הזה היה אדם ללא דופי. אחריהם [[סוניה]] ובעלה [[מרק]] הגיעו. סוניה לבושה שחור ושערה השחור אסוף לתסרוקת מפוארת מקושטת בסיכות מעוטרות בקריסטלים, זקופה ומחייכת. מרק, גבר נאה, גבוה ורחב, לבוש שחור גם הוא, פניו מעוטרים בשפם גזוז ולא עבה מידי. הם הביאו צלי בשר עם תפוחי אדמה, פנהטונה וריגו יאנצ'י. מרק הגיש ליויו ליקר דובדבנים ובקבוק שנאפס תפוחים. &quot;תודה רבה&quot;, הוא אמר לו, &quot;אנחנו הולכים להיגמר הלילה מאלכוהול, מרק, תיקח את זה בחשבון&quot;. &quot;אני ויקינג יויו, כלום לא מפיל אותי ובאנו עם מונית&quot;, מרק ענה. בשמונה ורבע חמשת הסינים הגיעו ואחד מהם הביא אתו חברה. [[קואנג]], [[ג'ונג]], [[פה]], [[צ'נג]] ו[[צ'ן]] שמותיהם, ושם העלמה [[גואן יין]]. הם לא עונים לשום קלישאה אודות עובדי בניין סיניים למעט עיניהם המלוכסנות ושמותיהם, ואלה אינם קלישאה. הם הביאו המון בקבוקים של בירה, קולה ויין, וגם לחמים וגבינות. גואן-יין הביאה חמוצים סיניים שהכינה וקדאיף שקנתה בעיר. אירי ואני היינו מהופנטות. סידרנו את כמויות המזון והמשקאות. השולחן התחיל להתפוצץ. [[ז'נבייב]] היפה והאלגנטית הגיעה עם שתי הבנות, [[אלכסנדרה]] ו[[ראשל]]. היא הביאה תרנגול הודו אפוי, קוסקוס שיויו התחנן שתביא למרות הכול ועיגולי מרציפן. הבנות הביאו שקית ענקית ומלאה בסוכריות גומי מתנה לכולם ובמיוחד לאלפרד שציפו להכיר והתחברו אליו מיד. רוז'ה הגיע עם לזניה צמחונית וזר פרחים, וחברתו אנה שהביאה סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום. 
 כבר היה רבע לתשע. דןדן ואני שטפנו את הכלים שהיו בכיור.
@@ -10855,6 +10810,22 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 טועמים ואם יש צורך מוסיפים מהתבלינים.
 
 מגישים עם עירית קצוצה.
+
+
+</pre>
+</div>
+<div created="20161114205035106" modified="20170423220100024" tags="[[מתכוני ארוחת הכריסמס]]" title="מתכוני ארוחת הכריסמס">
+<pre>[img[pictures/christmas-dinner.jpg]]
+
+
+!!![[גורה]]:
+
+טוב, בינתיים ממש לא כולם אבל אני בדרך לשם, וכידוע, הדרך היא החשובה.
+
+ואגב דרך, [[יויו]] ו[[דןדן]], הכינו [[תיקי גב|תיקי גב לקניות שדןדן ויויו הכינו]]. הם מצויינים לקניות שקודמות להכנת האוכל.
+
+&lt;&lt;list-links filter:&quot;[tag[מתכוני ארוחת הכריסמס]]&quot;&gt;&gt;
+
 
 
 </pre>
@@ -11546,12 +11517,12 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20170417192958980" modified="20170422220031801" tags="[[אחיות חוץ]]" title="פיליפ סימור הופמן">
+<div created="20170417192958980" modified="20170423203121130" tags="[[אחיות חוץ]]" title="פיליפ סימור הופמן">
 <pre>[img[pictures/Philip-Seymour-Hoffman.jpg]]
 
 !!![[יויו]]:
 
-נכון שהוא היה חור תחת בניחוח אישה ובביג לובובסקי, אבל הוא עשה את זה טוב, והוא גם היה בסינקדוכה ניו- יורק. 
+נכון שהוא היה חור תחת בבביג לובובסקי (של [[האחים כהן|איתן וג'ואל כהן]]), אבל הוא עשה את זה טוב, והוא גם היה בסינקדוכה ניו- יורק (של [[צ'רלי קאופמן]], שגם אותו אני מחשיב [[לאחות חוץ|אחיות חוץ]]. 
 
 אוהב אותו כאחות,
 
@@ -11650,6 +11621,12 @@ Fapina''
 !!![[גורה]]:
 
 צ'נג המפואר עם [[דניאל]] המפואר גם כן, פתחו את האתר הזה.</pre>
+</div>
+<div created="20170423212318190" modified="20170423212516461" tags="[[אחיות חוץ]]" title="צ'רלי קאופמן">
+<pre>
+[img[pictures/charlie-kaufman.jpg]]
+
+[[התסריטאי והבמאי|https://he.wikipedia.org/wiki/%D7%A6%27%D7%90%D7%A8%D7%9C%D7%99_%D7%A7%D7%90%D7%95%D7%A4%D7%9E%D7%9F]]</pre>
 </div>
 <div created="20170412170336651" modified="20170412203254735" tags="[[מתכוני ארוחת הכריסמס]]" title="צלי בשר עם תפוחי אדמה">
 <pre>[img[pictures/zli-bakar.jpg]]
