--- a/index.html
+++ b/index.html
@@ -8340,7 +8340,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ארוחת כריסמס]] [[חמאת שום ועשבי תיבול]] [[המטבח על פי ז'נבייב]] [[אחות כהן]] [[פיליפ סימור הופמן]] [[צ'רלי קאופמן]] [[אחיות חוץ]] [[מאיר אריאל]] [[ירקות קלויים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9139,8 +9139,8 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161111215423587" modified="20170419212342511" title="האחיות כהן">
-<pre>[img[pictures/K86u1tbSHje03L3Y.jpg]]
+<div created="20161111215423587" modified="20170423223435735" title="האחיות כהן">
+<pre>[img[pictures/coen-sisters.jpg]]
 
 
 
@@ -11623,8 +11623,7 @@ Fapina''
 צ'נג המפואר עם [[דניאל]] המפואר גם כן, פתחו את האתר הזה.</pre>
 </div>
 <div created="20170423212318190" modified="20170423212516461" tags="[[אחיות חוץ]]" title="צ'רלי קאופמן">
-<pre>
-[img[pictures/charlie-kaufman.jpg]]
+<pre>[img[pictures/charlie-kaufman.jpg]]
 
 [[התסריטאי והבמאי|https://he.wikipedia.org/wiki/%D7%A6%27%D7%90%D7%A8%D7%9C%D7%99_%D7%A7%D7%90%D7%95%D7%A4%D7%9E%D7%9F]]</pre>
 </div>
