--- a/index.html
+++ b/index.html
@@ -8340,7 +8340,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[המשק האוטרקי שלנו]] הקליניקה גלות [[מאיר אריאל]] [[איתן וג'ואל כהן]] [[דינה ז&quot;ל]] [[דןדן נסע]] פוליטיקאי פיליפ [[תיקי גב לקניות שדןדן ויויו הכינו]] [[אוטו מטריה]] [[מפעיל יד]] הקוסקוס ז'נבייב [[פיליפ סימור הופמן]] [[צ'רלי קאופמן]] [[אחיות חוץ]] [[ירקות קלויים]] [[חמאת שום ועשבי תיבול]] [[המטבח על פי ז'נבייב]] [[חלומות שחלמנו]] [[מה שבאמת קרה בארוחת כריסמס]] [[מתכוני ארוחת הכריסמס]] [[ארוחת כריסמס]] אלה [[דיוויד בואי]] [[מנקים היטב]] [[עיגולי מרציפן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8360,7 +8360,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170423220020802" title="$:/temp/search">
+<div created="20161023184814872" modified="20170424211508501" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8683,8 +8683,8 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161115182456203" modified="20170401163845219" title="אלה">
-<pre>[img[pictures/BaIAkKdSidrY1gLE.jpg]]
+<div created="20161115182456203" modified="20170424211434444" title="אלה">
+<pre>[img[pictures/ela.jpg]]
 
 !!![[יויו]]:
 
@@ -9016,8 +9016,8 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170105154405192" modified="20170416220914242" tags="[[אחיות חוץ]]" title="דיוויד בואי">
-<pre>[img[pictures/4ysMCHnnsnnNyQ96.jpg]]
+<div created="20170105154405192" modified="20170424211503342" tags="[[אחיות חוץ]]" title="דיוויד בואי">
+<pre>[img[pictures/david-bowie.jpg]]
 
 !!![[אירי]]:
 
@@ -9394,7 +9394,7 @@ loving you</pre>
 ([[cc|https://creativecommons.org/licenses/by-nc-sa/2.0/]]) [[Timo Heuer|https://www.flickr.com/photos/upim/3363312260]]
 @@</pre>
 </div>
-<div created="20161218221618167" modified="20170418175614763" title="המשק האוטרקי שלנו">
+<div created="20161218221618167" modified="20170424213253879" title="המשק האוטרקי שלנו">
 <pre>[img[pictures/hameshek-shelanoo.jpg]]
 
 !!![[אלפרד]]:
@@ -9403,7 +9403,7 @@ loving you</pre>
 
 שנינו יודעים שגם עם אחותי תתחרבן לגמרי יש לנו גב שהופך אותנו לחלק ממשק אוטרקי חברתית אנושית נפשית. 
 
-ואלה לפני שמניתי את היכולת לשפץ דירות, לשפץ רהיטים, לבשל, לאפות,יש לנו את המסעדה, יש לנו מטפלים בכמה אלטרנטיבות ועד כדי כדורים פסיכיאטריים.יש לנו משקיע הון סיכון, יש לנו עורך סאונד, אנחנו יודעים לערוך וידאו, יש לנו כותבות ותמיד יש מישהו בדירה.
+ואלה לפני שמניתי את היכולת לשפץ דירות, לשפץ רהיטים, לבשל, לאפות,יש לנו את המסעדה, יש לנו מטפלים בכמה אלטרנטיבות ועד כדי כדורים פסיכיאטריים.יש לנו משקיע הון סיכון, יש לנו עורך סאונד, אנחנו יודעים לערוך וידאו, יש לנו כותבות ותמיד יש צנצנת עם סוכריות גומי.
 
 
 </pre>
@@ -10725,7 +10725,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170114175718512" modified="20170422214900680" tags="[[המטבח עפ&quot;י ז'נבייב]]" title="מנקים היטב">
+<div created="20170114175718512" modified="20170424211535664" tags="[[המטבח על פי ז'נבייב]]" title="מנקים היטב">
 <pre>[img[pictures/menakim-heytev.jpg]]
 
 !!![[ז'נבייב]]:
@@ -11089,7 +11089,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ננסי  עורכת דין, למדה באנגליה, פלצנית, גזענית, כל הסט של אחות קיי, כולל &quot;אופנתיות&quot; בכל התחומים, מותגיסטית, מרבה לדבר בלועזית, יש לה ילד מגעיל שחוטף מכות ומגיע לו.</pre>
 </div>
-<div created="20170414012036863" modified="20170417162459545" tags="[[מתכוני ארוחת הכריסמס]]" title="עיגולי מרציפן">
+<div created="20170414012036863" modified="20170424211626183" tags="[[מתכוני ארוחת הכריסמס]] [[המטבח על פי ז'נבייב]]" title="עיגולי מרציפן">
 <pre>[img[pictures/marzipan.jpg]]
 
 
