תמונות ערוכות ותיקונים

--- a/index.html
+++ b/index.html
@@ -8340,7 +8340,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[המשק האוטרקי שלנו]] הקליניקה גלות [[מאיר אריאל]] [[איתן וג'ואל כהן]] [[דינה ז&quot;ל]] [[דןדן נסע]] פוליטיקאי פיליפ [[תיקי גב לקניות שדןדן ויויו הכינו]] [[אוטו מטריה]] [[מפעיל יד]] הקוסקוס ז'נבייב [[פיליפ סימור הופמן]] [[צ'רלי קאופמן]] [[אחיות חוץ]] [[ירקות קלויים]] [[חמאת שום ועשבי תיבול]] [[המטבח על פי ז'נבייב]] [[חלומות שחלמנו]] [[מה שבאמת קרה בארוחת כריסמס]] [[מתכוני ארוחת הכריסמס]] [[ארוחת כריסמס]] אלה [[דיוויד בואי]] [[מנקים היטב]] [[עיגולי מרציפן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="גיגי קרן איריס [[תפוחי אדמה ובטטות בתנור]] מג'דרה [[מרק כתום בסיר גדול]] [[פאי פקאן עם קרמל]] [[סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום]] [[פלפלים קלויים]] [[סלט עדשים עם כוסברה ובצל קצוץ]] [[שעועית ירוקה בחמאה ושום]] [[עיר בנויה מרחובות]] [[צלי בשר עם תפוחי אדמה]] חזרת [[פחזניות ממולאות בכבד קצוץ]] [[מלפפונים חמוצים]] [[גרטן תפו&quot;א]] [[תבשיל שורשים ואורז בשלושה צבעים]] [[עוגיות קימל]] [[טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן]] [[סלט מלפפונים עם בצל סגול ושמיר]] [[סלט חסה]] אספרגוס [[סלק מבושל]] [[סלט עגבניות עם שום]] [[חמוצים סיניים]] [[עוגת מוקה]] פנטונה [[תרנגול הודו אפוי]] [[לזניה צמחונית]] [[ריגו יאנצ'י]] [[לייף סטייל]] פבלובה [[תשבץ למאומנים]] קוסקוס [[שאלון האחיות]] [[הסיפור על גורה, שסופר לאווה, על ידי יויו]] [[פאי דובדבנים]] [[פאי אגסים עם קרם גבינה ושקדים]] המעבדה [[ג'ון אירווינג]] מקלדת [[רן יגיל]] [[ג'וזף אברואה]] גורה קואנג [[אווה כהן]] [[איריס הבת]] תומר אנה יויו דניאל רוז'ה אלכסנדרה ראשל אלפרד סוניה צ'נג מרק אנג'ליק [[כירולוגיה פסיכודיאגנוסטית]] פה ג'ונג [[גואן יין]] דןדן הדירה [[מחפשת את אירי]] אירי [[המשק האוטרקי שלנו]] הקליניקה גלות [[מאיר אריאל]] [[איתן וג'ואל כהן]] [[דינה ז&quot;ל]] [[דןדן נסע]] פוליטיקאי פיליפ [[תיקי גב לקניות שדןדן ויויו הכינו]] [[אוטו מטריה]] [[מפעיל יד]] הקוסקוס ז'נבייב [[פיליפ סימור הופמן]] [[צ'רלי קאופמן]] [[אחיות חוץ]] [[ירקות קלויים]] [[חמאת שום ועשבי תיבול]] [[המטבח על פי ז'נבייב]] [[חלומות שחלמנו]] [[מה שבאמת קרה בארוחת כריסמס]] [[מתכוני ארוחת הכריסמס]] [[ארוחת כריסמס]] אלה [[דיוויד בואי]] [[מנקים היטב]] [[עיגולי מרציפן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8749,8 +8749,8 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20170417190840968" tags="[[אחות כהן]]" title="אנג'ליק">
-<pre>[img[pictures/NJG20RsskNd6rMFa.jpg]]
+<div created="20161115215016493" modified="20170424215148847" tags="[[אחות כהן]]" title="אנג'ליק">
+<pre>[img[pictures/angelic.jpg]]
 
 ג'ינג'ית יפה וירוקת עיניים שהגיעה אלינו דרך [[אלפרד]], איתו למדה את הקורס ל [[כירולוגיה פסיכודיאגנוסטית]].</pre>
 </div>
@@ -8882,8 +8882,8 @@ Error message and password prompt
 
 !!![[גורה]]:</pre>
 </div>
-<div created="20170324140400308" modified="20170417190947267" tags="[[אחות כהן]]" title="גואן יין">
-<pre>[img[pictures/uUxxryZKC79Uycnj.jpg]]
+<div created="20170324140400308" modified="20170424213754317" tags="[[אחות כהן]]" title="גואן יין">
+<pre>[img[pictures/guen-inn.jpg]]
 
 !!![[גורה]]:
 
@@ -10919,8 +10919,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * מתבלים בשמן זית, מיץ מחצי לימון ומלח ים גס.
 * אפשר להגיש מיד או מאוחר יותר או לאפסן במקרר ולשמור עד ארבעה ימים.</pre>
 </div>
-<div created="20161115212458524" modified="20170404203928325" tags="[[מתכוני ארוחת הכריסמס]]" title="סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום">
-<pre>[img[pictures/yBdpK1g4nA5g7Cp0.jpg]]
+<div created="20161115212458524" modified="20170424215636713" tags="[[מתכוני ארוחת הכריסמס]]" title="סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום">
+<pre>[img[pictures/salat-shorashim.jpg]]
 
 !!![[אנה]]:
 
@@ -11608,8 +11608,8 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170324140233570" modified="20170417190903330" tags="[[אחות כהן]]" title="צ'ן">
-<pre>[img[pictures/RtGijsgvLVYmY9N3.jpg]]
+<div created="20170324140233570" modified="20170424214046263" tags="[[אחות כהן]]" title="צ'ן">
+<pre>[img[pictures/chan.jpg]]
 
 !!![[גורה]]:
 
