חוות החיות ומתוייגים והחלפת תמונות

--- a/index.html
+++ b/index.html
@@ -267,6 +267,8 @@ Error message and password prompt
 
 <li>אשת העסקים</li>
 
+<li>בחוות החיות</li>
+
 <li>בית האננס ההוואי של אירי</li>
 
 <li>ג'וזף אברואה</li>
@@ -369,6 +371,8 @@ Error message and password prompt
 
 <li>כוכב המשאלות בעל תשע הצלעות</li>
 
+<li>כורתים עצים</li>
+
 <li>כירולוגיה פסיכודיאגנוסטית</li>
 
 <li>לוקוס בתנור</li>
@@ -388,6 +392,8 @@ Error message and password prompt
 <li>מה שבאמת קרה בארוחת כריסמס</li>
 
 <li>מוכרת הדיסקים/dj</li>
+
+<li>מחלקים סלולרים</li>
 
 <li>מחפשת את אירי</li>
 
@@ -416,6 +422,8 @@ Error message and password prompt
 <li>נדיה</li>
 
 <li>סוניה</li>
+
+<li>סוסים לדבק</li>
 
 <li>סוף הנחלה</li>
 
@@ -8340,7 +8348,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="גיגי קרן איריס [[תפוחי אדמה ובטטות בתנור]] מג'דרה [[מרק כתום בסיר גדול]] [[פאי פקאן עם קרמל]] [[סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום]] [[פלפלים קלויים]] [[סלט עדשים עם כוסברה ובצל קצוץ]] [[שעועית ירוקה בחמאה ושום]] [[עיר בנויה מרחובות]] [[צלי בשר עם תפוחי אדמה]] חזרת [[פחזניות ממולאות בכבד קצוץ]] [[מלפפונים חמוצים]] [[גרטן תפו&quot;א]] [[תבשיל שורשים ואורז בשלושה צבעים]] [[עוגיות קימל]] [[טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן]] [[סלט מלפפונים עם בצל סגול ושמיר]] [[סלט חסה]] אספרגוס [[סלק מבושל]] [[סלט עגבניות עם שום]] [[חמוצים סיניים]] [[עוגת מוקה]] פנטונה [[תרנגול הודו אפוי]] [[לזניה צמחונית]] [[ריגו יאנצ'י]] [[לייף סטייל]] פבלובה [[תשבץ למאומנים]] קוסקוס [[שאלון האחיות]] [[הסיפור על גורה, שסופר לאווה, על ידי יויו]] [[פאי דובדבנים]] [[פאי אגסים עם קרם גבינה ושקדים]] המעבדה [[ג'ון אירווינג]] מקלדת [[רן יגיל]] [[ג'וזף אברואה]] גורה קואנג [[אווה כהן]] [[איריס הבת]] תומר אנה יויו דניאל רוז'ה אלכסנדרה ראשל אלפרד סוניה צ'נג מרק אנג'ליק [[כירולוגיה פסיכודיאגנוסטית]] פה ג'ונג [[גואן יין]] דןדן הדירה [[מחפשת את אירי]] אירי [[המשק האוטרקי שלנו]] הקליניקה גלות [[מאיר אריאל]] [[איתן וג'ואל כהן]] [[דינה ז&quot;ל]] [[דןדן נסע]] פוליטיקאי פיליפ [[תיקי גב לקניות שדןדן ויויו הכינו]] [[אוטו מטריה]] [[מפעיל יד]] הקוסקוס ז'נבייב [[פיליפ סימור הופמן]] [[צ'רלי קאופמן]] [[אחיות חוץ]] [[ירקות קלויים]] [[חמאת שום ועשבי תיבול]] [[המטבח על פי ז'נבייב]] [[חלומות שחלמנו]] [[מה שבאמת קרה בארוחת כריסמס]] [[מתכוני ארוחת הכריסמס]] [[ארוחת כריסמס]] אלה [[דיוויד בואי]] [[מנקים היטב]] [[עיגולי מרציפן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]] פוליטיקאי [[סוסים לדבק]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8360,7 +8368,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170424211508501" title="$:/temp/search">
+<div created="20161023184814872" modified="20170425175328598" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8654,8 +8662,8 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170201204950366" modified="20170401233123732" title="איריס">
-<pre>[img[pictures/SolDw2CExA3H9JHF.jpg]]
+<div created="20170201204950366" modified="20170425162732610" title="איריס">
+<pre>[img[pictures/iris.jpg]]
 
 
 
@@ -8841,6 +8849,24 @@ Error message and password prompt
 <pre>[img[pictures/oh3SWvg2g1OAPJFl.jpg]]
 
 נאדיה היא אשת עסקים מזן ה-K. היא נראית מבוגרת, ומתלבשת מבוגר וחום (פוליאסטר וטרילין), מתהדרת ביושר, בידע והבנת העולם. נשואה ובוגדנית.</pre>
+</div>
+<div created="20170425194155286" modified="20170425212841236" title="בחוות החיות">
+<pre>[img[pictures/bechavat-hachayot.jpg]]
+
+
+!!![[גורה]]:
+
+!![[מאד מאד כייף]]
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[בחוות החיות]]&quot;&gt;&gt;
+
+
+
+
+
+</pre>
 </div>
 <div created="20161111220614335" modified="20161118212010594" title="בית האננס ההוואי של אירי">
 <pre>[img[pictures/AMMWBcSauRNlvNUR.JPG]]
@@ -9337,14 +9363,14 @@ Error message and password prompt
 
 זואי. המטפלת השמחה-עצובה. ראש קופירייטרי, טיפולית, דואגת לכל, יכולה להתגייס לתחמנויות, יכולת משחק, מסאז'יסטית, לוק תמים, חרוצה, מתכננת.</pre>
 </div>
-<div created="20161113192814802" modified="20170415192359817" title="המעבדה">
-<pre>[img[pictures/t2az8aqECTTa8imN.JPG]]
+<div created="20161113192814802" modified="20170425194141203" title="המעבדה">
+<pre>[img[pictures/hamaabada.jpg]]
 
 !!![[כאן היינו]]
 
 !!![[גורה]]:
 
-כשהיינו כאן, הדשא שלפני הבית היה גדול' והגיע עד לירידה לנחל. בסתיו ובחורף הוא היה  משופע פרחים. נרקיסים, רקפות, כלניות.
+[[כשהיינו כאן|בחוות החיות]], הדשא שלפני הבית היה גדול' והגיע עד לירידה לנחל. בסתיו ובחורף הוא היה  משופע פרחים. נרקיסים, רקפות, כלניות.
 
 למעשה יויו התגורר כאן, בתקופה שהתחבר [[למקלדת|מקלדת]] והפך לאווה כהן, ואני הייתי על תקן האחות, שמבקרת לעתים תכופות.
 
@@ -9966,6 +9992,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 בקרוב יועתק לכאן.</pre>
 </div>
+<div created="20170425180523126" modified="20170425194058179" tags="[[בחוות החיות]]" title="כורתים עצים">
+<pre>[img[pictures/kortim-ezim.jpg]]
+
+!!![[גורה]]:
+
+[[בחוות החיות|https://he.wikipedia.org/wiki/%D7%97%D7%95%D7%95%D7%AA_%D7%94%D7%97%D7%99%D7%95%D7%AA]], החזירים והכלבים כורתים עצים, כדי לבנות לגובה.
+
+</pre>
+</div>
 <div created="20161115215130799" modified="20170328195040375" title="כירולוגיה פסיכודיאגנוסטית">
 <pre>[img[pictures/yZiEyakkL0F87eQO.JPG]]
 
@@ -10048,10 +10083,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161114183334957" modified="20170414011342325" title="לייף סטייל">
+<div created="20161114183334957" modified="20170425201723182" title="לייף סטייל">
 <pre>[img[pictures/lifestyle.jpg]]
 
 !![[זה משו]]
+
+[[שווה כריתה|כורתים עצים]] [[ופוסט|מחלקים סלולרים]].
 
 </pre>
 </div>
@@ -10171,6 +10208,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 היא והספרית הן המבוגרות האחראיות בסיפור.
 </pre>
+</div>
+<div created="20170425201738858" modified="20170425203515224" tags="[[בחוות החיות]]" title="מחלקים סלולרים">
+<pre>
+[img[pictures/mechalkim-nayadim.jpg]]
+
+!![[בחוות החיות, בכייף שלהם החזירים מחלקים סלולרים.]]</pre>
 </div>
 <div created="20170406164152446" modified="20170418160335679" title="מחפשת את אירי">
 <pre>[img[pictures/mechapeset-et-iri.jpg]]
@@ -10814,7 +10857,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161114205035106" modified="20170423220100024" tags="[[מתכוני ארוחת הכריסמס]]" title="מתכוני ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170425194308004" tags="[[מתכוני ארוחת הכריסמס]]" title="מתכוני ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -10848,8 +10891,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 לארוחת הכריסמס היא הכינה [[צלי בשר עם תפוחי אדמה]], [[פנה-טונה]], ו-[[ריגו יאנצ'י]].</pre>
 </div>
-<div created="20170201205235325" modified="20170205191016891" title="סוף הנחלה">
-<pre>[img[pictures/hdx92FbCD14xkJnm.jpg]]
+<div created="20170425213116567" modified="20170425213952365" tags="[[בחוות החיות]]" title="סוסים לדבק">
+<pre>
+
+[img[pictures/soosim-ledevek.jpg]]
+
+!!![[כשהסוסים מתעייפים, החזירים והכלבים שולחים אותם  לבית החרושת לדבק.]]
+
+</pre>
+</div>
+<div created="20170201205235325" modified="20170425162158982" title="סוף הנחלה">
+<pre>[img[pictures/sof-hanachala.jpg]]
 
 !!![[אווה]]:
 
@@ -11426,7 +11478,7 @@ __אופן ההכנה____
 <div created="20170324140205427" modified="20170417190916651" tags="[[אחות כהן]]" title="פה">
 <pre>[img[pictures/zYSyawODRSpsQ3mx.jpg]]</pre>
 </div>
-<div created="20170419212629057" modified="20170422130340042" title="פוליטיקאי">
+<div created="20170419212629057" modified="20170425213108365" title="פוליטיקאי">
 <pre>[img[pictures/politician.jpg]]
 
 
@@ -11434,7 +11486,7 @@ __אופן ההכנה____
 
 נכון לרגע זה, היינו אומרים, שפוליטיקאי הוא:
 
-תאב שלטון
+[[תאב שלטון|סוסים לדבק]]
 
 
 
@@ -11779,8 +11831,8 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170202133543180" modified="20170203154456896" title="רזיאל ורפאל">
-<pre>[img[pictures/d2nPM4AL4WsnydOG.jpg]]
+<div created="20170202133543180" modified="20170425162003640" title="רזיאל ורפאל">
+<pre>[img[pictures/refaelveraziel.jpg]]
 
 !!![[אווה]]:
 
@@ -11851,12 +11903,12 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170124175341008" modified="20170206170410388" tags="" title="ריחות">
-<pre>[img[https://i.imgur.com/BJxTJjt.jpg)]]
+<div created="20170124175341008" modified="20170425191121295" tags="" title="ריחות">
+<pre>[img[pictures/reychot.jpg]]
 
 !!![[אווה]]:
 
-מימין לעץ שנמצא בצד ימין של התמונה, עמדה הנגרייה של הנחלה בה גדלתי וחייתי עד שהגעתי לארץ קצת אחרי שמלאו לי 18.
+מימין [[לעץ|כורתים עצים]] שנמצא בצד ימין של התמונה, עמדה הנגרייה של הנחלה בה גדלתי וחייתי עד שהגעתי לארץ קצת אחרי שמלאו לי 18.
 
 
 
